# HexTag

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json
include/: general.h
source/: fact.cpp  main.cpp
tests/: test_main.cpp
